--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "trunk-template"
+name = "rust-wasm-poc"
 version = "0.1.0"
 edition = "2018"
-description = "Template for starting a Yew project using Trunk"
 readme = "README.md"
-repository = "https://github.com/yewstack/yew-trunk-minimal-template"
 license = "MIT OR Apache-2.0"
 keywords = ["yew", "trunk"]
 categories = ["gui", "wasm", "web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-yew = "0.17"
+strum = "0.21"
+strum_macros = "0.21"
+serde = "1"
+serde_derive = "1"
+yew = "0.18.0"
+yew-services = { path = "./yew-services" }
