--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ strum = "0.21"
 strum_macros = "0.21"
 serde = "1"
 serde_derive = "1"
+serde_json = "1.0.64"
+anyhow = "1.0.41"
 yew = "0.18.0"
-yew-services = { path = "./yew-services" }
