--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ anyhow = "1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
+web-sys = { version = "0.3.51", features = ["Clipboard", "Navigator"] }
+wasm-bindgen-futures = "0.4.26"
 yew = "0.18.0"
